fix overflow issue causing horizontal scroll bar

--- a/css/anime.css
+++ b/css/anime.css
@@ -1,5 +1,5 @@
-body{
-  overflow-x: hidden;
+.container{
+  overflow: hidden;
 }
 
 .frame {
